--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
     <header class="three columns">
-        <img src="../static/img/photo3.jpg" width="190" height="204" class="me">
+        <img src="{{ site.baseurl }}static/img/photo3.jpg" width="190" height="204" class="me">
         <h1>{{ site.name }}</h1>
         <p>
             <a href="{{ site.email_full }}">{{ site.email }}</a><a href="{{ site.tel_full }}"></a>        </p>
