--- a/_includes/honors.html
+++ b/_includes/honors.html
@@ -10,7 +10,7 @@
         <p>*National Graduate   Scholarship  2016</p>
       </li>
       <li>
-        <p>*The 2rd  place among 843 teams in Alibaba Large-scale Image Search Challenge 2015</p>
+        <p>*The 2nd  place among 843 teams in Alibaba Large-scale Image Search Challenge 2015</p>
       </li>
       <li>
         <p>*ICIP2015 Best 10% Paper Award</p>
