--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -9,8 +9,10 @@
         <p>Pattern Recognition</p>
         <p>Neurocomputing </p>
         <p><br />
-          <strong>Conference Reviewer</strong><br />
+        <strong>Conference Reviewer</strong><br />
         </p>
+        The Thirty-Third AAAI Conference on Artificial Intelligence, (AAAI-19)
+        <p>Asian Conference on Computer Vision, 2018</p>
         <p>IEEE Conference on Computer Vision and Pattern Recognition, 2018</p>
         <p>International Joint Conference on Artificial Intelligence, 2018</p>
         <p>Asian Conference on Computer Vision, 2016</p>
