--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -17,8 +17,10 @@
 <section class="thirteen columns">
     <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
     <address>
+    <p><em>[2018-09-05]
+    One paper is accepted to NIPS 2018. </em></p>
     <p><em>[2018-05-21]
-    Two papers are accepted to IJCAI 2018. </em></p>
+      Two papers are accepted to IJCAI 2018. </em></p>
     <p><em>[2018-05-15]
     I am supported by program for Post-doctoral Innovative Talents.</em></p>
     </address>
