--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -11,6 +11,7 @@
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
+        <p>IEEE Conference on Computer Vision and Pattern Recognition, 2019 </p>
         The Thirty-Third AAAI Conference on Artificial Intelligence, (AAAI-19)
         <p>Asian Conference on Computer Vision, 2018</p>
         <p>IEEE Conference on Computer Vision and Pattern Recognition, 2018</p>
