--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -17,8 +17,10 @@
 <section class="thirteen columns">
     <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
     <address>
+    <p><em>[2019-03-03]
+    Two papers are accepted to CVPR 2019. </em></p>
     <p><em>[2018-11-28]
-    We organizded a Tutorial  in PRCV 2018, and PPT can be download <a href="http://www.peihuali.org/HOCNN-tutorial/index.html">Here</a>.</em></p>
+      We organizded a Tutorial  in PRCV 2018, and PPT can be download <a href="http://www.peihuali.org/HOCNN-tutorial/index.html">Here</a>.</em></p>
     <p><em>[2018-09-05]
       One paper is accepted to NIPS 2018. </em></p>
     <p><em>[2018-05-21]
