--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -6,11 +6,12 @@
         <p>IEEE Transactions on Neural Networks and Learning  Systems </p>
         <p>IEEE Transactions on Image Processing</p>
         <p>IEEE Transactions on Circuits and Systems for Video Technology</p>
+        <p>IEEE Transactions on Multimedia</p>
         <p>Pattern Recognition</p>
-        <p>Neurocomputing </p>
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
+        <p>IEEE International Conference on Computer Vision, 2019 </p>
         <p>IEEE Conference on Computer Vision and Pattern Recognition, 2019 </p>
         The Thirty-Third AAAI Conference on Artificial Intelligence, (AAAI-19)
         <p>Asian Conference on Computer Vision, 2018</p>
