--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -52,7 +52,13 @@ a:visited {
         <p><strong>Conference Papers </strong></p>
         <ol>
           <li>
-            <div align="justify">Qilong Wang*, Zilin Gao*, Jiangtao Xie, Wangmeng Zuo, Peihua Li. Global Gated Mixture of Second-order Pooling for Improving Deep Convolutional Neural Networks. Thirty-second Conference on Neural Information Processing Systems (<strong>NIPS</strong>), 2018. [<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks.pdf">PDF</a>][<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks-supplemental.zip">Supplemental</a>][<a href="https://github.com/ZilinGao/GM-SOP">Code</a>] (*The first two authors contribute equally to this work.) </div>
+            <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[PDF and code are coming soon.]</div>
+          </li>
+          <li>
+            <div align="justify">Zilin Gao, Jiangtao Xie, <strong>Qilong Wang</strong>, Peihua Li. Global Second-order Pooling Convolutional Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[PDF and code are coming soon.]</div>
+          </li>
+          <li>
+            <div align="justify"><strong>Qilong Wang</strong>*, Zilin Gao*, Jiangtao Xie, Wangmeng Zuo, Peihua Li. Global Gated Mixture of Second-order Pooling for Improving Deep Convolutional Neural Networks. Thirty-second Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2018. [<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks.pdf">PDF</a>][<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks-supplemental.zip">Supplemental</a>][<a href="https://github.com/ZilinGao/GM-SOP">Code</a>] (*The first two authors contribute equally to this work.) </div>
           </li>
           <li>
             <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Mingqi Gao, Peihua Li,  Wangmeng Zuo. Multi-scale Location-aware Kernel Representation for Object  Detection. 31th IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018. [<a href="http://211.81.63.130/cloud/211.81.63.2/cache/1/03/openaccess.thecvf.com/09119e2f8ec5f17d8f708030a564df43/Wang_Multi-Scale_Location-Aware_Kernel_CVPR_2018_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/1804.00428">arXiv</a>] [<a href="https://github.com/Hwang64/MLKP">Code</a>] <em>(The first attempt to integrate  higher-order statistics into object detection task)</em></div>
