--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -11,14 +11,8 @@
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
-        <p>IEEE International Conference on Computer Vision, 2019 </p>
-        <p>IEEE Conference on Computer Vision and Pattern Recognition, 2019 </p>
-        The Thirty-Third AAAI Conference on Artificial Intelligence, (AAAI-19)
-        <p>Asian Conference on Computer Vision, 2018</p>
-        <p>IEEE Conference on Computer Vision and Pattern Recognition, 2018</p>
-        <p>International Joint Conference on Artificial Intelligence, 2018</p>
-        <p>Asian Conference on Computer Vision, 2016</p>
+        <p>ICCV 2019, CVPR 2019,  AAAI 2019, ACCV 2018, CVPR 2018, IJCAI 2018, ACCV 2016 </p>
       </header>
     </article>
-  <article></article>
+    <article></article>
 </section>
