--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -7,6 +7,6 @@
     <h1>About Me </h1>
     <article>
       <header></header>
-      <p align="justify">I just join Tianjin University as a lecturer at the College  of Intelligence and Computing. Previously, I received the B.S. degree and M.Sc. degree from Heilongjiang University in 2011 and 2014, and the Ph.D. degree from Dalian University of Technology under the supervision of Prof.<span class="STYLE1"><a href="http://www.peihuali.org/">Peihua Li</a></span> in 2018. My research is on computer vision and  deep learning, particularly visual classification and deep probability distribution modeling.</p>
+      <p align="justify">I joined Tianjin University as an Assistant Professor at the College  of Intelligence and Computing in 2018. Previously, I received the B.S. degree and M.Sc. degree from Heilongjiang University in 2011 and 2014, and the Ph.D. degree from Dalian University of Technology under the supervision of Prof.<span class="STYLE1"><a href="http://www.peihuali.org/">Peihua Li</a></span> in 2018. My research is on computer vision and  deep learning, particularly visual classification and deep architectures based on probability distribution modeling or high-order statistical modeling.</p>
     </article>
 </section>
