--- a/_includes/honors.html
+++ b/_includes/honors.html
@@ -4,19 +4,13 @@
     <header></header>
     <ul>
       <li>
-        <p>*National Graduate   Scholarship  2017</p>
-      </li>
-      <li>
-        <p>*National Graduate   Scholarship  2016</p>
-      </li>
-      <li>
         <p>*The 2nd  place among 843 teams in Alibaba Large-scale Image Search Challenge 2015</p>
       </li>
       <li>
         <p>*ICIP2015 Best 10% Paper Award</p>
       </li>
       <li>
-        <p>*National Graduate   Scholarship 2013</p>
+        <p>*National Graduate   Scholarship  2017, 2016, 2013 </p>
       </li>
     </ul>
   </article>
