--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -29,33 +29,49 @@ a:visited {
         <header></header>
         <p align="justify"><strong>Journal Papers</strong></p>
         <ol>
-          <li>
-            <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>TPAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>] </div>
+          <li><div align="justify"><div align="justify">
+            <div align="justify">
+                  <div align="justify"><strong>Qilong Wang</strong>, Jiangtao Xie, Wangmeng Zuo,  Lei Zhang and 
+                    Peihua Li.  Deep CNNs Meet Global Covariance Pooling:
+                    Better Representation and Generalization. <strong>IEEE</strong> <strong>TPAMI</strong>, 2019 (Accept). [PDF and code are coming soon.][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
+            </div>
+              </div>
+            </div>
           </li>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE TCSVT</strong>, 2017. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
+            <div align="justify">
+              <div align="justify">
+                <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>TPAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
+              </div>
+            </div>
+          </li>
+          <li><div align="justify"><div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE TCSVT</strong>, 2017. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
+          </div>
           </li>
           <li>
-            <div align="justify">Mu Li, <strong>Qilong Wang,</strong> David Zhang, Peihua Li,  Wangmeng Zuo. Joint Distance and Similarity Measure Learning based on  Triplet-based Constraints. <strong>Information  Sciences</strong>, 2017. [<a href="https://www.sciencedirect.com/science/article/pii/S0020025517306734">PDF</a>] </div>
+            <div align="justify">Mu Li, <strong>Qilong Wang,</strong> David Zhang, Peihua Li,  Wangmeng Zuo. Joint Distance and Similarity Measure Learning based on  Triplet-based Constraints. <strong>Information  Sciences</strong>, 2017. [<a href="https://www.sciencedirect.com/science/article/pii/S0020025517306734">PDF</a>]</div>
           </li>
-          <li>
+          <li><div align="justify">
             <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE TIP</strong>,  2017. [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_TIP.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
+            </div>
           </li>
-          <li>
+          <li><div align="justify">
             <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>] </div>
+            </div>
           </li>
-          <li>
+          <li><div align="justify">
             <div align="justify">Hua Hao, <strong>Qilong Wang</strong>, Peihua Li, Lei Zhang.  Evaluation of Ground Distances and Features in EMD-based GMM Matching for  Texture Classification. <strong>Pattern  Recognition</strong> 57: 152-163, 2016. [<a href="https://www.sciencedirect.com/science/article/pii/S0031320316000960">PDF</a>] </div>
+            </div>
           </li>
         </ol>
         <p align="justify">&nbsp;</p>
         <p><strong>Conference Papers </strong></p>
         <ol>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[PDF and code are coming soon.]</div>
+            <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [Code is coming soon.]</div>
           </li>
           <li>
-            <div align="justify">Zilin Gao, Jiangtao Xie, <strong>Qilong Wang</strong>, Peihua Li. Global Second-order Pooling Convolutional Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[PDF and code are coming soon.]</div>
+            <div align="justify">Zilin Gao, Jiangtao Xie, <strong>Qilong Wang</strong>, Peihua Li. Global Second-order Pooling Convolutional Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Global_Second-Order_Pooling_Convolutional_Networks_CVPR_2019_paper.pdf">PDF</a>][<a href="https://github.com/ZilinGao/Global-Second-order-Pooling-Convolutional-Networks?tdsourcetag=s_pctim_aiomsg">Code</a>]</div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>*, Zilin Gao*, Jiangtao Xie, Wangmeng Zuo, Peihua Li. Global Gated Mixture of Second-order Pooling for Improving Deep Convolutional Neural Networks. Thirty-second Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2018. [<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks.pdf">PDF</a>][<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks-supplemental.zip">Supplemental</a>][<a href="https://github.com/ZilinGao/GM-SOP">Code</a>] (*The first two authors contribute equally to this work.) </div>
