--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,7 +20,7 @@ a:visited {
             <article>
               <header></header>
             </article>
-          Selected Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>) </h1>
+          Selected Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
         </section></h1>
   </header>
     </article>
@@ -33,7 +33,7 @@ a:visited {
             <div align="justify">
                   <div align="justify"><strong>Qilong Wang</strong>, Jiangtao Xie, Wangmeng Zuo,  Lei Zhang and 
                     Peihua Li.  Deep CNNs Meet Global Covariance Pooling:
-                    Better Representation and Generalization. <strong>IEEE</strong> <strong>TPAMI</strong>, 2020 (Accept). [PDF and code are coming soon.][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
+                    Better Representation and Generalization. <strong>IEEE</strong> <strong>T-PAMI</strong>, 2020 (Accept). [PDF and code are coming soon.][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
             </div>
               </div>
             </div>
@@ -41,18 +41,16 @@ a:visited {
           <li>
             <div align="justify">
               <div align="justify">
-                <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>TPAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
+                <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>T-PAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
               </div>
             </div>
           </li>
-          <li><div align="justify"><div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE TCSVT</strong>, 2017. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
+          <li><div align="justify">
+            <div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE T-CSVT</strong> 28(10): 2449<span _ngcontent-c10="">-2459</span>, 2018. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
           </div>
           </li>
-          <li>
-            <div align="justify">Mu Li, <strong>Qilong Wang,</strong> David Zhang, Peihua Li,  Wangmeng Zuo. Joint Distance and Similarity Measure Learning based on  Triplet-based Constraints. <strong>Information  Sciences</strong>, 2017. [<a href="https://www.sciencedirect.com/science/article/pii/S0020025517306734">PDF</a>]</div>
-          </li>
           <li><div align="justify">
-            <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE TIP</strong>,  2017. [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_TIP.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
+            <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE T-IP</strong> 26(7): 3372<span _ngcontent-c10="">-3384</span>,  2017. [<a href="https://ieeexplore.ieee.org/document/7904668">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
             </div>
           </li>
           <li><div align="justify">
