--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -17,8 +17,10 @@
 <section class="thirteen columns">
     <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
     <address>
+    <p><em>[2020-02-27]
+    Three papers are accepted to CVPR 2020.</em></p>
     <p><em>[2020-02-11]
-    One paper is accepted to IEEE T-PAMI.</em></p>
+      One paper is accepted to IEEE T-PAMI.</em></p>
     <p><em>[2019-03-03]
       Two papers are accepted to CVPR 2019. </em></p>
     <p><em>[2018-11-28]
