--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -67,11 +67,11 @@ a:visited {
         <ol>
           <li>
             <div align="justify">
-              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>,?Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling:An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[Paper and Code are coming soon.]</div>
+              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[Paper and Code are coming soon.]</div>
             </div>
           </li>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net:Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[PDF][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
+            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[PDF][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [<a href="https://github.com/csqlwang/3G-Net">Code</a>]</div>
