--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -67,7 +67,7 @@ a:visited {
         <ol>
           <li>
             <div align="justify">
-              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[Paper and Code are coming soon.]</div>
+              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[PDF][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
             </div>
           </li>
           <li>
