--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -11,7 +11,7 @@
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
-        <p>CVPR 2018-2020, ECCV 2020, ICCV 2019,  AAAI 2019, IJCAI 2018, ACCV 2016-2018
+        <p>CVPR 2018-2020, NeruIPS 2020, ECCV 2020, ICCV 2019,  AAAI 2019 2021, IJCAI 2018, ACCV 2016-2020
           <article></article>
 </p>
       </header>
