--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,20 +20,20 @@ a:visited {
             <article>
               <header></header>
             </article>
-          Selected Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
+          Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
         </section></h1>
   </header>
     </article>
     <section class="thirteen columns">
       <article>
         <header></header>
-        <p align="justify"><strong>Journal Papers</strong></p>
+        <p align="justify"><strong>Selected Journal Papers</strong></p>
         <ol>
           <li><div align="justify"><div align="justify">
             <div align="justify">
                   <div align="justify"><strong>Qilong Wang</strong>, Jiangtao Xie, Wangmeng Zuo,  Lei Zhang and 
                     Peihua Li.  Deep CNNs Meet Global Covariance Pooling:
-                    Better Representation and Generalization. <strong>IEEE</strong> <strong>T-PAMI</strong>, 2020 (Accept). [PDF and code are coming soon.][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
+                    Better Representation and Generalization. <strong>IEEE</strong> <strong>T-PAMI</strong>, 2020 (Accept). [<a href="https://ieeexplore.ieee.org/document/9001240">PDF</a>][<a href="http://peihuali.org/MPN-COV/">Code</a>][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
             </div>
               </div>
             </div>
@@ -54,24 +54,22 @@ a:visited {
             </div>
           </li>
           <li><div align="justify">
-            <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>] </div>
+            <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>]
+              <div align="justify"></div>
             </div>
-          </li>
-          <li><div align="justify">
-            <div align="justify">Hua Hao, <strong>Qilong Wang</strong>, Peihua Li, Lei Zhang.  Evaluation of Ground Distances and Features in EMD-based GMM Matching for  Texture Classification. <strong>Pattern  Recognition</strong> 57: 152-163, 2016. [<a href="https://www.sciencedirect.com/science/article/pii/S0031320316000960">PDF</a>] </div>
             </div>
           </li>
         </ol>
         <p align="justify">&nbsp;</p>
-        <p><strong>Conference Papers </strong></p>
+        <p><strong>Selected Conference Papers </strong></p>
         <ol>
           <li>
             <div align="justify">
-              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[PDF][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
+              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_What_Deep_CNNs_Benefit_From_Global_Covariance_Pooling_An_Optimization_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
             </div>
           </li>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[PDF][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
+            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_ECA-Net_Efficient_Channel_Attention_for_Deep_Convolutional_Neural_Networks_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [<a href="https://github.com/csqlwang/3G-Net">Code</a>]</div>
