--- a/_includes/honors.html
+++ b/_includes/honors.html
@@ -3,8 +3,11 @@
   <article>
     <header></header>
     <ul>
-      <li>
-        <p>*The 2nd  place among 843 teams in Alibaba Large-scale Image Search Challenge 2015</p>
+<li>
+  <p>*The <span id="tran_2_6" onmouseover="hlgt('#src_2_3,#tran_2_6')" onmouseout="unhlgt('#src_2_3,#tran_2_6')">excellent</span> <span id="tran_2_7" onmouseover="hlgt('#src_2_4,#tran_2_7')" onmouseout="unhlgt('#src_2_4,#tran_2_7')">doctoral</span> <span id="tran_2_8" onmouseover="hlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')" onmouseout="unhlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')">dissertation</span> of Chinese Association for Artificial Intelligence (CAAI)</p>
+</li>
+<li>
+  <p>*The 2nd  place among 843 teams in Alibaba Large-scale Image Search Challenge 2015</p>
       </li>
       <li>
         <p>*ICIP2015 Best 10% Paper Award</p>
