--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -11,9 +11,11 @@
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
-        <p>CVPR 2018-2020, NeruIPS 2020, ECCV 2020, ICCV 2019,  AAAI 2019 2021, IJCAI 2018, ACCV 2016-2020
+        <p>CVPR 2018-2021, ICLR 2020, NeurIPS 2020, ECCV 2020, ICCV 2019, ACCV 2016-2020
           <article></article>
 </p>
+        <p> PC for AAAI 2019 2021, IJCAI 2018-2019</p>
+        <p>SPC for IJCAI 2020</p>
       </header>
     </article>
 </section>
