--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -19,7 +19,7 @@
     <address>
     <p>I am looking forward to two Master candidates to join us at September 2021. If you  are  interested to join our group, please send your CV to qlwang@tju.edu.cn.</p>
     <p><em>[2020-09-15]
-      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span> the </em> <span id="tran_2_6" onmouseover="hlgt('#src_2_3,#tran_2_6')" onmouseout="unhlgt('#src_2_3,#tran_2_6')">excellent</span> <span id="tran_2_7" onmouseover="hlgt('#src_2_4,#tran_2_7')" onmouseout="unhlgt('#src_2_4,#tran_2_7')">doctoral</span> <span id="tran_2_8" onmouseover="hlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')" onmouseout="unhlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')">dissertation</span> of Chinese Association for Artificial Intelligence (CAAI). </p>
+      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span> the </em> <span id="tran_2_6" onmouseover="hlgt('#src_2_3,#tran_2_6')" onmouseout="unhlgt('#src_2_3,#tran_2_6')"><em>excellent</em></span> <span id="tran_2_7" onmouseover="hlgt('#src_2_4,#tran_2_7')" onmouseout="unhlgt('#src_2_4,#tran_2_7')"><em>doctoral</em></span> <span id="tran_2_8" onmouseover="hlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')" onmouseout="unhlgt('#src_2_5#src_2_6#src_2_11,#tran_2_8')"><em>dissertation</em></span> <em>of Chinese Association for Artificial Intelligence (CAAI).</em> </p>
     <p><em>[2020-02-27]
       Three papers are accepted to CVPR 2020.</em></p>
     <p><em>[2020-02-11]
