--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -12,15 +12,18 @@
 	font-weight: bold;
 	font-style: italic;
 }
-.STYLE15 {color: #3300FF}
+.STYLE16 {
+	color: #0000FF;
+	font-style: italic;
+}
 -->
 </style>
 <section class="thirteen columns">
     <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
     <address>
-    <p class="STYLE15">I am looking forward to two Master candidates to join us at September 2021. If you  are  interested to join our group, please send your CV to qlwang@tju.edu.cn.</p>
+    <p class="STYLE16">I am looking forward to two Master candidates to join us at September 2021. If you  are  interested to join our group, please send your CV to qlwang@tju.edu.cn.</p>
     <p><em>[2020-09-15]
-      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> the excellent doctoral dissertation of CAAI.</p>
+      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em></p>
     <p><em>[2020-02-27]
       Three papers are accepted to CVPR 2020.</em></p>
     <p><em>[2020-02-11]
