--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -21,8 +21,7 @@
 <section class="thirteen columns">
     <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
     <address>
-    <p class="STYLE16">I am looking forward to two Master candidates to join us at September 2021. If you  are  interested to join our group, please send your CV to qlwang@tju.edu.cn.</p>
-    <p>&nbsp;</p>
+    <p class="STYLE16">&nbsp;</p>
     <p><em>[2020-09-15]
       I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em></p>
     <p><em>[2020-02-27]
