--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -19,9 +19,11 @@
 -->
 </style>
 <section class="thirteen columns">
-    <h1 class="STYLE4"><span class="STYLE14">Updates!</span>    </h1>
+    <h1 class="STYLE4"><span class="STYLE14">News!</span>    </h1>
     <address>
     <p class="STYLE16">&nbsp;</p>
+    <p><em>[2021-03-27]
+    One paper is accepted to CVPR 2021.</em></p>
     <p><em>[2020-09-15]
       I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em></p>
     <p><em>[2020-02-27]
