--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,7 +20,7 @@ a:visited {
             <article>
               <header></header>
             </article>
-          Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
+          Selected Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
         </section></h1>
   </header>
     </article>
