--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -25,7 +25,7 @@
     <p><em>[2021-03-27]
     One paper is accepted to CVPR 2021.</em></p>
     <p><em>[2020-09-15]
-      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em></p>
+      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em> [<a href="http://caai.cn/index.php?s=/home/article/detail/id/978.html">Official news of CAAI</a>?and?<a href="https://www.sohu.com/a/431893118_505819">SOHU</a>]</p>
     <p><em>[2020-02-27]
       Three papers are accepted to CVPR 2020.</em></p>
     <p><em>[2020-02-11]
