--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -27,7 +27,7 @@ a:visited {
     <section class="thirteen columns">
       <article>
         <header></header>
-        <p align="justify"><strong>Selected Journal Papers</strong></p>
+        <p align="justify"><strong> Journal Papers</strong></p>
         <ol>
           <li><div align="justify"><div align="justify">
             <div align="justify">
@@ -61,7 +61,7 @@ a:visited {
           </li>
         </ol>
         <p align="justify">&nbsp;</p>
-        <p><strong>Selected Conference Papers </strong></p>
+        <p><strong>Conference Papers </strong></p>
         <ol>
           <li>
             <div align="justify">
