--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -16,6 +16,14 @@
 	color: #0000FF;
 	font-style: italic;
 }
+.STYLE17 {
+	color: #0000CC;
+	font-weight: bold;
+}
+.STYLE18 {
+	color: #000099;
+	font-weight: bold;
+}
 -->
 </style>
 <section class="thirteen columns">
@@ -25,7 +33,7 @@
     <p><em>[2021-03-27]
     One paper is accepted to CVPR 2021.</em></p>
     <p><em>[2020-09-15]
-      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em> [<a href="http://caai.cn/index.php?s=/home/article/detail/id/978.html"><strong>Official news of CAAI</strong></a> and <a href="https://www.sohu.com/a/431893118_505819"><strong>SOHU</strong></a>]</p>
+      I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em> [<a href="http://caai.cn/index.php?s=/home/article/detail/id/978.html" class="STYLE17">Official news of CAAI</a> and <a href="https://www.sohu.com/a/431893118_505819" class="STYLE18">SOHU</a>]</p>
     <p><em>[2020-02-27]
       Three papers are accepted to CVPR 2020.</em></p>
     <p><em>[2020-02-11]
