--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -27,55 +27,65 @@ a:visited {
     <section class="thirteen columns">
       <article>
         <header></header>
-        <p align="justify"><strong> Journal Papers</strong></p>
-        <ol>
+        <p align="justify"><strong> Preprint Papers</strong></p>
+<ol>
           <li><div align="justify"><div align="justify">
+            <div align="justify">
+                  <div align="justify">Jiangtao Xie, Ruiren Zeng, <strong>Qilong Wang</strong>, Ziqi Zhou, Peihua Li. So-ViT: Mind Visual Tokens for Vision Transformer. CoRR abs/2104.10935, 2021. [<a href="https://arxiv.org/abs/2104.10935">arXiv</a>][<a href="https://github.com/jiangtaoxie/So-ViT">Code</a>]&nbsp;(We make an attempt to exploit visual tokens of vision Transformer by using second-order pooling for&nbsp; effective visual classification.)</div>
+            </div>
+              </div>
+          </div>
+      </li>
+</ol>
+<p align="justify"><strong> Journal Papers</strong></p>
+<ol>
+      <li><div align="justify"><div align="justify">
             <div align="justify">
                   <div align="justify"><strong>Qilong Wang</strong>, Jiangtao Xie, Wangmeng Zuo,  Lei Zhang and 
                     Peihua Li.  Deep CNNs Meet Global Covariance Pooling:
-                    Better Representation and Generalization. <strong>IEEE</strong> <strong>T-PAMI</strong>, 2020 (Accept). [<a href="https://ieeexplore.ieee.org/document/9001240">PDF</a>][<a href="http://peihuali.org/MPN-COV/">Code</a>][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
+                    Better Representation and Generalization. <strong>IEEE</strong> <strong>T-PAMI</strong>43(8): 2582-2597, 2021. [<a href="https://ieeexplore.ieee.org/document/9001240">PDF</a>][<a href="http://peihuali.org/MPN-COV/">Code</a>][<a href="https://arxiv.org/abs/1904.06836?context=cs.CV">arXiv</a>]</div>
             </div>
               </div>
-            </div>
-          </li>
-          <li>
-            <div align="justify">
-              <div align="justify">
-                <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>T-PAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
-              </div>
-            </div>
-          </li>
-          <li><div align="justify">
-            <div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE T-CSVT</strong> 28(10): 2449<span _ngcontent-c10="">-2459</span>, 2018. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
           </div>
-          </li>
-          <li><div align="justify">
-            <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE T-IP</strong> 26(7): 3372<span _ngcontent-c10="">-3384</span>,  2017. [<a href="https://ieeexplore.ieee.org/document/7904668">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
-            </div>
-          </li>
-          <li><div align="justify">
-            <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>]
-              <div align="justify"></div>
-            </div>
-            </div>
-          </li>
-        </ol>
+      </li>
+      <li>
+        <div align="justify">
+          <div align="justify">
+            <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>T-PAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
+          </div>
+        </div>
+      </li>
+      <li><div align="justify">
+          <div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE T-CSVT</strong> 28(10): 2449<span _ngcontent-c10="">-2459</span>, 2018. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
+          </div>
+      </li>
+      <li><div align="justify">
+          <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE T-IP</strong> 26(7): 3372<span _ngcontent-c10="">-3384</span>,  2017. [<a href="https://ieeexplore.ieee.org/document/7904668">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
+          </div>
+      </li>
+      <li><div align="justify">
+          <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>]
+            <div align="justify"></div>
+          </div>
+          </div>
+      </li>
+      </ol>
         <p align="justify">&nbsp;</p>
         <p><strong>Conference Papers </strong></p>
         <ol>
           <li>
             <div align="justify">
-              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_What_Deep_CNNs_Benefit_From_Global_Covariance_Pooling_An_Optimization_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
+              <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020. [<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_What_Deep_CNNs_Benefit_From_Global_Covariance_Pooling_An_Optimization_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
             </div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_ECA-Net_Efficient_Channel_Attention_for_Deep_Convolutional_Neural_Networks_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
           </li>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [<a href="https://github.com/csqlwang/3G-Net">Code</a>]</div>
+            <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019. [<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [<a href="https://github.com/csqlwang/3G-Net">Code</a>]</div>
           </li>
           <li>
-            <div align="justify">Zilin Gao, Jiangtao Xie, <strong>Qilong Wang</strong>, Peihua Li. Global Second-order Pooling Convolutional Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019.[<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Global_Second-Order_Pooling_Convolutional_Networks_CVPR_2019_paper.pdf">PDF</a>][<a href="https://github.com/ZilinGao/Global-Second-order-Pooling-Convolutional-Networks?tdsourcetag=s_pctim_aiomsg">Code</a>]</div>
+            <div align="justify">Zilin Gao, Jiangtao Xie, <strong>Qilong Wang</strong>, Peihua Li. Global Second-order Pooling Convolutional Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019. [<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Global_Second-Order_Pooling_Convolutional_Networks_CVPR_2019_paper.pdf">PDF</a>][<a href="https://github.com/ZilinGao/Global-Second-order-Pooling-Convolutional-Networks?tdsourcetag=s_pctim_aiomsg">Code</a>]</div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>*, Zilin Gao*, Jiangtao Xie, Wangmeng Zuo, Peihua Li. Global Gated Mixture of Second-order Pooling for Improving Deep Convolutional Neural Networks. Thirty-second Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2018. [<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks.pdf">PDF</a>][<a href="https://papers.nips.cc/paper/7403-global-gated-mixture-of-second-order-pooling-for-improving-deep-convolutional-neural-networks-supplemental.zip">Supplemental</a>][<a href="https://github.com/ZilinGao/GM-SOP">Code</a>] (*The first two authors contribute equally to this work.) </div>
