--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -30,9 +30,8 @@
     <h1 class="STYLE4"><span class="STYLE14">News!</span>    </h1>
     <address>
     <p class="STYLE16">&nbsp;</p>
-    <p>[2021-07-27] One paper is accepted to ICCV 2021.&nbsp;</p>
-    <p><em>[2021-03-27]
-      One paper is accepted to CVPR 2021.</em></p>
+    <p><em>[2021-07-27] One paper is accepted to ICCV 2021.</em></p>
+    <p><em>[2021-03-27] One paper is accepted to CVPR 2021.</em></p>
 <p><em>[2020-09-15]
       I was <span id="tran_0_9" onmouseover="hlgt('#src_0_12,#tran_0_9')" onmouseout="unhlgt('#src_0_12,#tran_0_9')">awarded</span></em> <em>the excellent doctoral dissertation of Chinese Association for Artificial Intelligence (CAAI).</em> [<a href="http://caai.cn/index.php?s=/home/article/detail/id/978.html" class="STYLE17">Official news of CAAI</a> and <a href="https://www.sohu.com/a/431893118_505819" class="STYLE18">SOHU</a>]</p>
     <p><em>[2020-02-27]
