--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -7,6 +7,6 @@
     <h1>About Me </h1>
     <article>
       <header></header>
-      <p align="justify">I am an associate professor  at the College  of Intelligence and Computing of Tianjin University. Previously, I joined Tianjin University as an Assistant Professor  in 2018. I received the B.S. degree and M.Sc. degree from Heilongjiang University in 2011 and 2014, and the Ph.D. degree from Dalian University of Technology under the supervision of Prof.<span class="STYLE1"><a href="http://www.peihuali.org/">Peihua Li</a></span> in 2018. My research interests are on computer vision and  deep learning, particularly image/video classification, object detection, architecture design and&nbsp;optimization of deep models (i.e., high-order statistical modeling and self-attention mechanism).</p>
+      <p align="justify">I am an associate professor  at the College  of Intelligence and Computing of Tianjin University. Previously, I joined Tianjin University as an Assistant Professor  in 2018. I received the B.S. degree and M.Sc. degree from Heilongjiang University in 2011 and 2014, and the Ph.D. degree from Dalian University of Technology under the supervision of Prof.<span class="STYLE1"><a href="http://www.peihuali.org/">Peihua Li</a></span> in 2018. My research interests are on computer vision and  deep learning, particularly image/video classification, object detection, architecture design and&nbsp;optimization of deep models (e.g., high-order statistical modeling and self-attention mechanism).</p>
     </article>
 </section>
