--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,7 +31,7 @@ a:visited {
 <ol>
           <li><div align="justify"><div align="justify">
             <div align="justify">
-                  <div align="justify">Jiangtao Xie, Ruiren Zeng, <strong>Qilong Wang</strong>, Ziqi Zhou, Peihua Li. So-ViT: Mind Visual Tokens for Vision Transformer. CoRR abs/2104.10935, 2021. [<a href="https://arxiv.org/abs/2104.10935">arXiv</a>][<a href="https://github.com/jiangtaoxie/So-ViT">Code</a>]&nbsp;(We make an attempt to exploit visual tokens of vision Transformer by using second-order pooling for&nbsp; effective visual classification.)</div>
+                  <div align="justify">Jiangtao Xie, Ruiren Zeng, <strong>Qilong Wang</strong>, Ziqi Zhou, Peihua Li. So-ViT: Mind Visual Tokens for Vision Transformer. CoRR abs/2104.10935, 2021. [<a href="https://arxiv.org/abs/2104.10935">arXiv</a>][<a href="https://github.com/jiangtaoxie/So-ViT">Code</a>]&nbsp;<em>(We make an attempt to exploit visual tokens of vision Transformer by using second-order pooling for&nbsp; effective visual classification.)</em></div>
             </div>
               </div>
           </div>
@@ -73,6 +73,16 @@ a:visited {
         <p align="justify">&nbsp;</p>
         <p><strong>Conference Papers </strong></p>
         <ol>
+		  <li>
+            <div align="justify">
+              <div align="justify">Bowen Dong, Zitong Huang, Yuelin Guo, <strong>Qilong Wang</strong>, Zhenxing Niu, Wangmeng Zuo. Boosting Weakly Supervised Object Detection via Learning Bounding Box Adjusters. 18th IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2021. </div>
+            </div>
+          </li>
+		  <li>
+            <div align="justify">
+              <div align="justify">Longyin Wen, Dawei Du, Pengfei Zhu, Qinghua Hu, <strong>Qilong Wang</strong>, Liefeng Bo, Siwei Lyu. Detection, Tracking, and Counting Meets Drones in Crowds: A Benchmark.&nbsp;34th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021. [<a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wen_Detection_Tracking_and_Counting_Meets_Drones_in_Crowds_A_Benchmark_CVPR_2021_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2105.02440">arXiv</a>][<a href="https://github.com/VisDrone/DroneCrowd">Code</a>]</div>
+            </div>
+          </li>
           <li>
             <div align="justify">
               <div align="justify"><strong>Qilong Wang</strong>, Li Zhang, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu</span>, Dongwei Ren, Peihua Li, Wangmeng Zuo, Qinghua Hu. What Deep CNNs Benefit from Global Covariance Pooling: An Optimization Perspective. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020. [<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_What_Deep_CNNs_Benefit_From_Global_Covariance_Pooling_An_Optimization_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2003.11241">arXiv</a>][<a href="https://github.com/ZhangLi-CS/GCP_Optimization">Code</a>]</div>
